--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -713,6 +713,8 @@ a {
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-top: 0; }
+  .widget-area .business-hours-widget-class p {
+    margin: 1rem 0; }
   .widget-area .business-hours-widget-class .business-hours-day {
     font-weight: bold; }
   .widget-area .inhabitent-contact-info-class .contact-phone,
